modules/cli/src/test/resources/good/disamb/imports/Import03.scr
module good.disamb.imports.Import03;


import good.disamb.imports.Import03 as Import03;  // Good
