modules/cli/src/test/resources/bad/syntax/disamb/modules/Modules04b.scr
module bad.syntax.disamb.modules.Modules04b;

import bad.syntax.disamb.modules.Modules04b as Modules04b;  // Simple name coincides with full name 

